# saas-intelligence-platform

./: .gitignore  README.md  mlflow.db  pyproject.toml  requirements.txt  run_pipeline.py
outputs/.mplconfig/: fontlist-v390.json
src/dashboard/: app.py
src/data/: generate_data.py  make_synthetic.py
src/features/: build_features.py  feature_engineering.py
src/models/: churn_model.py
src/nlp/: ticket_analyzer.py
src/scoring/: health_score.py
