[project]
name = "saas-customer-health-intelligence"
version = "0.1.0"
description = "SaaS Customer Health Intelligence Platform: churn prediction + health scoring + support NLP + CX dashboard"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

